--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,63 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "../layouts/Layout.astro";
+import ParticleButton from "../components/ParticleButton.tsx";
 ---
 
 <Layout>
-	<Welcome />
+    <div
+        class="container mx-auto sm:px-10 px-3 min-h-screen flex items-center overflow-hidden relative"
+    >
+        <div class="relative z-10 px-4 max-w-4xl font-mono">
+            <h1 class="text-3xl md:text-5xl mb-6 font-extrabold">Welcome!</h1>
+            <p>
+                I'm
+                <b class="text-orange-700 dark:text-green-600">
+                    Ahmed Ragab
+                </b>, A Software Engineer building high performance web
+                applications and scalable design systems
+            </p>
+
+            <div>
+                <p
+                    class="text-sm md:text-base text-zinc-600 dark:text-zinc-400 max-w-2xl"
+                >
+                    <i>Currently</i> I'm developing the website in the background,
+                    hopefully it'll be ready soon!
+                </p>
+            </div>
+
+            <div class="mt-3">
+                <p class="bg-black text-white dark:bg-white dark:text-black">
+                    wanna reach out?
+                </p>
+                <p class="text-xs space-x-2 mt-1.5">
+                    <a
+                        class="text-orange-700 hover:underline dark:text-orange-600"
+                        href="mailto:ahmedragab20901@gmail.com"
+                        target="_blank"
+                    >
+                        Email me
+                    </a>
+                    <a
+                        class="text-blue-500 hover:underline dark:text-blue-400"
+                        href="https://www.linkedin.com/in/ahmed-ragab-bb75541b3/"
+                        target="_blank"
+                    >
+                        LinkedIn
+                    </a>
+                    <a
+                        class="text-gray-600 hover:underline dark:text-gray-300"
+                        href="https://github.com/ahmedragab20"
+                        target="_blank"
+                    >
+                        GitHub
+                    </a>
+                </p>
+            </div>
+
+            <div class="mt-6">
+                <ParticleButton client:load />
+            </div>
+        </div>
+    </div>
 </Layout>
