--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <link rel="stylesheet" href="/src/assets/styles/tailwind.css" />
+        <style>
+            @import "tailwindcss";
+        </style>
         <title>Ahmed Ragab - Software Engineer</title>
     </head>
     <body class="bg-white dark:bg-zinc-950 dark:text-white">
