--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import ParticleButton from "../components/ParticleButton.tsx";
+import { Salad } from "@lucide/astro";
 ---
 
 <Layout>
     <div
         class="container mx-auto sm:px-10 px-3 min-h-screen flex items-center overflow-hidden relative"
     >
+        <Salad class="absolute top-0 left-0 w-10 h-10" />
         <div class="relative z-10 px-4 max-w-4xl font-mono">
             <h1 class="text-3xl md:text-5xl mb-6 font-extrabold">Welcome!</h1>
             <p>
