--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,12 +13,12 @@
                 if (savedTheme && themes.includes(savedTheme)) {
                     document.documentElement.setAttribute(
                         "data-theme",
-                        savedTheme,
+                        savedTheme
                     );
                 } else {
                     document.documentElement.setAttribute(
                         "data-theme",
-                        "nordfox",
+                        "nordfox"
                     );
                 }
             })();
