--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import ParticleButton from "../components/ParticleButton.tsx";
+import ThemeSwitcher from "../components/ThemeSwitcher.astro";
 ---
 
 <Layout>
@@ -55,8 +56,9 @@ import ParticleButton from "../components/ParticleButton.tsx";
                 </p>
             </div>
 
-            <div class="mt-6">
+            <div class="mt-6 flex items-center gap-4">
                 <ParticleButton client:load />
+                <ThemeSwitcher />
             </div>
         </div>
     </div>
