--- a/src/pages/design-system.astro
+++ b/src/pages/design-system.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import ThemeToggle from "../components/ThemeToggle.tsx";
+import ThemeToggle from "../components/app/ThemeToggle/ThemeToggle";
 import { Button } from "../components/atoms/Button";
 import { Input } from "../components/atoms/Input";
 import { Card } from "../components/atoms/Card";
